Add render things

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
+  # Static site service
   - type: web
-    name: three-player-chess
+    name: chess-frontend
     env: static
     buildCommand: null  # No build needed for static site
     staticPublishPath: ./
@@ -11,4 +12,20 @@ services:
     routes:
       - type: rewrite
         source: /*
-        destination: /index.html 
+        destination: /index.html
+    envVars:
+      - key: BACKEND_URL
+        sync: false  # This will be set manually in Render dashboard
+        
+  # Backend service
+  - type: web
+    name: chess-backend
+    env: node
+    buildCommand: npm install
+    startCommand: npm start
+    rootDirectory: .  # Specify the root directory where package.json is located
+    envVars:
+      - key: PORT
+        value: 10000
+      - key: CORS_ORIGIN
+        sync: false  # This will be set to your frontend URL 
